SOS-1908 fix microblog mention misalignment

--- a/portlets/microblogs-portlet/docroot/microblogs/css/main.css
+++ b/portlets/microblogs-portlet/docroot/microblogs/css/main.css
@@ -236,7 +236,7 @@ $microblogs-border-color: #EAEAEA;
 
 		@include force-wrap;
 
-		left: 5px;
+		left: 3px;
 		line-height: 1.5em;
 		padding: 4px;
 		position: absolute;
@@ -254,6 +254,7 @@ $microblogs-border-color: #EAEAEA;
 		span {
 			background-color: #97D1FF;
 			border-radius: 3px;
+			color: rgba(0,0,0,0.9);
 			font-weight: normal;
 			padding: 2px 0;
 			visibility: visible;
